examples/canopy/json.peg
grammar CanopyJson

document  <-  __ (object / array) __

object    <-  "{" pair ("," pair)* "}" / "{" __ "}"

pair      <-  __ string __ ":" value

array     <-  "[" value ("," value)* "]" / "[" __ "]"

value     <-  __ (object / array / string / number / boolean / null) __

string    <-  '"' ("\\" . / [^"])* '"'

number    <-  "-"? ("0" / [1-9] [0-9]*) ("." [0-9]+)? (("e" / "E") ("+" / "-" / "") [0-9]+)?

boolean   <-  "true" / "false"

null      <-  "null"

__        <-  [\s]*
